infra/k8s-local/decision-engine-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: decision-loop-server-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: decision-loop-server
  template: 
    metadata:
      labels:
        app: decision-loop-server
    spec:
      containers:
        - name: decision-loop-server
          image: decision-loop/decision-loop-server
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: decision-loop-server-srv
spec:
  selector:
    app: decision-loop-server
  ports:
    - name: decision-loop-server
      protocol: TCP
      port: 3000
      targetPort: 3000
